architectural improvements